Fix z-indexing.

--- a/packages/client/src/public/actions.css
+++ b/packages/client/src/public/actions.css
@@ -57,6 +57,7 @@
 #game-list {
     .list-actions {
         position: fixed;
+        z-index: 3;
         width: 100%;
         bottom: 0px;
         background: linear-gradient(to bottom, rgba(0, 0, 0, 0), var(--bg-0));
