--- a/packages/client/src/public/component-css/gamelist.css
+++ b/packages/client/src/public/component-css/gamelist.css
@@ -73,13 +73,14 @@
     }
 
     #add-section {
+        position: relative;
+        z-index: 3;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
         align-items: center;
         flex: 1;
         width: 100%;
-        position: relative;
         background-color: var(--bg-0);
         text-align: center;
     }
